crates/formatter/tests/snapshots/snapshots__synapse__main__delta__73__21_un_partial_stated_room_stream_seq.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create sequence if not exists un_partial_stated_room_stream_sequence;

select
	setval(
		'un_partial_stated_room_stream_sequence',
		(select coalesce(max(stream_id), 1) from un_partial_stated_room_stream)
	);
